# CompeticaoPetrobras2020

./: CMakeLists.txt  README.md  camera.rviz  hector_drone.rviz  package.xml
launch/: simulation_arena.launch
models/tutorial_model/: model.config  model.sdf
scripts/: fase1_full.py  fase2.py  fase3.py  go_to.py  spawn
scripts/simulation/: __init__.py  spawn.py
scripts/utils/classes/: BlueFoxImage.py  Laser.py  MavrosState.py  Motor.py  Painel.py  Position_Command.py  ReferencePublisher.py  Tracker.py
scripts/utils/examples_tests/: controle_basico.py  go_to_bases.py  land.py  scan_map.py  stage_controller.py  takeoff.py
scripts/utils/functions/: basic_movements.py  complex_movements.py  control_with_vision.py  goto.py  other_functions.py
start/: start.sh  uav1_pos.yaml
start/ros_uav_waypoints/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
start/ros_uav_waypoints/catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
start/ros_uav_waypoints/catkin_generated/installspace/: waypoint_flier.pc  waypoint_flierConfig.cmake
start/ros_uav_waypoints/catkin_generated/stamps/waypoint_flier/: _setup_util.py.stamp  package.xml.stamp
start/ros_uav_waypoints/config/: default.yaml  default_arena.yaml
start/ros_uav_waypoints/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
start/ros_uav_waypoints/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
start/ros_uav_waypoints/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
start/ros_uav_waypoints/include/: WaypointFlier.h
start/ros_uav_waypoints/launch/: waypoint_flier.launch  waypoint_flier_arena.launch
start/ros_uav_waypoints/src/: WaypointFlier.cpp
worlds/: fase3.world  fase4.world  test.world
(+4 files in other folders)
