<?xml version="1.0"?>
<package format="2">
  <name>ufmg_desafio_petrobras</name>
  <version>1.0.0</version>
  <description>This package contains scripts for spawning of vehicles at petrobras arena challenge</description>

  <maintainer email="jorge.luiz.henri@hotmail.com">Jorge Luiz Henriques</maintainer>

  <license>free of charge</license>

  <author email="jorge.luiz.henri@hotmail.com">Jorge Luiz Henriques</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>px4</depend>
  <depend>mavlink_sitl_gazebo</depend>
  <depend>mrs_gazebo_common_resources</depend>
  <exec_depend>hector_compressed_map_transport</exec_depend>
  <exec_depend>hector_geotiff</exec_depend>
  <exec_depend>hector_geotiff_plugins</exec_depend>
  <exec_depend>hector_map_server</exec_depend>
  <exec_depend>hector_map_tools</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>hector_marker_drawing</exec_depend>
  <exec_depend>hector_nav_msgs</exec_depend>
  <exec_depend>hector_slam_launch</exec_depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
      GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
      the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
